fix: Desktop on map view navigation not working. It goes directly to the listing. On mobile there is no navigation (only if you swipe) and the icons must be bigger. Also the swiping does not work correctly because the map is moving in the background when you try to swipe.

--- a/src/containers/SearchPage/SearchMapInfoCard/SearchMapInfoCard.module.css
+++ b/src/containers/SearchPage/SearchMapInfoCard/SearchMapInfoCard.module.css
@@ -630,6 +630,10 @@ margin-right: 10px;
     & svg{
       width: 16px;
       height: 16px;
+      @media (max-width: 767px) {
+        width: 23px;
+        height: 23px;
+      }
     }
   }
 
